fix: rebrand to dbest

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "setd-stack",
+  "name": "dbest-stack",
   "scripts": {
     "dev": "bun --bun solid-start dev",
     "build": "bun --bun solid-start build",
