feat: deployment with docker and compose

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-DATABASE_URL=postgres://postgres:adminadmin@0.0.0.0:5432/db
-VITE_HOST_URL=http://localhost:3000
+DATABASE_HOST="localhost"
+DATABASE_PORT="5432"
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="postgres"
+DATABASE_NAME="postgres"
+DATABASE_SSL="false"
+VITE_HOST_URL="http://localhost:3000"
+COMPOSE_APP_PORT="3000"
+COMPOSE_DATABASE_BACKUP_PATH="$HOME/backup"
+COMPOSE_PROFILES="development"
