--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
-DATABASE_HOST="localhost"
-DATABASE_PORT="5432"
-DATABASE_USER="postgres"
-DATABASE_PASSWORD="postgres"
-DATABASE_NAME="postgres"
-DATABASE_SSL="false"
+DATABASE_URL=""
 VITE_HOST_URL="http://localhost:3000"
 COMPOSE_APP_PORT="3000"
+COMPOSE_DATABASE_PORT="5432"
+COMPOSE_DATABASE_USER="postgres"
+COMPOSE_DATABASE_PASSWORD="postgres"
+COMPOSE_DATABASE_NAME="postgres"
 COMPOSE_DATABASE_BACKUP_PATH="$HOME/backup"
 COMPOSE_PROFILES="development"
