feat: new recommended folder structure, validation fixes

--- a/package.json
+++ b/package.json
@@ -10,30 +10,30 @@
   "type": "module",
   "devDependencies": {
     "autoprefixer": "10.4.16",
-    "bun-types": "1.0.3",
-    "drizzle-kit": "0.19.13",
-    "esbuild": "0.19.3",
+    "bun-types": "latest",
+    "drizzle-kit": "0.20.4",
+    "esbuild": "0.19.7",
     "pg": "8.11.3",
-    "postcss": "8.4.30",
-    "prettier": "3.0.3",
-    "prettier-plugin-tailwindcss": "0.5.4",
-    "solid-start-bun": "0.3.6",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2",
-    "vite": "4.4.9"
+    "postcss": "8.4.31",
+    "prettier": "3.1.0",
+    "prettier-plugin-tailwindcss": "0.5.7",
+    "solid-start-bun": "0.3.10",
+    "tailwindcss": "3.3.5",
+    "typescript": "5.3.2",
+    "vite": "5.0.2"
   },
   "dependencies": {
     "@elysiajs/eden": "0.7.4",
     "@paralleldrive/cuid2": "2.2.2",
-    "@solidjs/meta": "0.28.6",
-    "@solidjs/router": "0.8.3",
-    "@tanstack/solid-query": "5.0.0-alpha.20",
-    "drizzle-orm": "0.28.6",
+    "@solidjs/meta": "0.29.1",
+    "@solidjs/router": "0.9.1",
+    "@tanstack/solid-query": "5.8.7",
+    "drizzle-orm": "0.29.0",
     "drizzle-typebox": "0.1.1",
-    "elysia": "0.7.15",
-    "postgres": "3.3.5",
-    "solid-js": "1.7.12",
-    "solid-start": "0.3.5"
+    "elysia": "0.7.29",
+    "postgres": "3.4.3",
+    "solid-js": "1.8.6",
+    "solid-start": "0.3.10"
   },
   "prettier": {
     "singleQuote": true,
