--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,10 @@ services:
   app:
     image: app:latest
     restart: always
-    build: .
+    build:
+      context: .
+      args:
+        VITE_HOST_URL: ${VITE_HOST_URL:-http://localhost:3000}
     depends_on:
       - database
     links:
@@ -21,7 +24,7 @@ services:
     environment:
       POSTGRES_USER: ${COMPOSE_DATABASE_USER}
       POSTGRES_PASSWORD: ${COMPOSE_DATABASE_PASSWORD}
-      POSTGRES_DATABASE: ${COMPOSE_DATABASE_NAME}
+      POSTGRES_DB: ${COMPOSE_DATABASE_NAME}
     volumes:
       - database:/var/lib/postgresql/data
 
