--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   },
   "type": "module",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "6.13.1",
+    "@typescript-eslint/parser": "6.13.1",
     "autoprefixer": "10.4.16",
     "bun-types": "latest",
-    "drizzle-kit": "0.20.4",
-    "esbuild": "0.19.7",
+    "drizzle-kit": "0.20.6",
+    "esbuild": "0.19.8",
+    "eslint": "8.54.0",
+    "eslint-import-resolver-typescript": "3.6.1",
+    "eslint-plugin-drizzle": "0.2.1",
+    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-solid": "0.13.0",
     "pg": "8.11.3",
     "postcss": "8.4.31",
     "prettier": "3.1.0",
@@ -20,20 +27,63 @@
     "solid-start-bun": "0.3.10",
     "tailwindcss": "3.3.5",
     "typescript": "5.3.2",
-    "vite": "5.0.2"
+    "vite": "5.0.4"
   },
   "dependencies": {
     "@elysiajs/eden": "0.7.4",
     "@paralleldrive/cuid2": "2.2.2",
     "@solidjs/meta": "0.29.1",
     "@solidjs/router": "0.9.1",
-    "@tanstack/solid-query": "5.8.7",
-    "drizzle-orm": "0.29.0",
+    "@tanstack/solid-query": "5.10.0",
+    "drizzle-orm": "0.29.1",
     "drizzle-typebox": "0.1.1",
     "elysia": "0.7.29",
     "postgres": "3.4.3",
     "solid-js": "1.8.6",
     "solid-start": "0.3.10"
+  },
+  "eslintConfig": {
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint",
+      "import",
+      "solid",
+      "drizzle"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/recommended",
+      "plugin:import/typescript",
+      "plugin:solid/typescript",
+      "plugin:drizzle/recommended"
+    ],
+    "rules": {
+      "import/newline-after-import": [
+        "warn",
+        {
+          "count": 1
+        }
+      ],
+      "solid/no-array-handlers": "error",
+      "solid/prefer-show": "error",
+      "drizzle/enforce-delete-with-where": [
+        "error",
+        {
+          "drizzleObjectName": [
+            "db"
+          ]
+        }
+      ],
+      "drizzle/enforce-update-with-where": [
+        "error",
+        {
+          "drizzleObjectName": [
+            "db"
+          ]
+        }
+      ]
+    }
   },
   "prettier": {
     "singleQuote": true,
@@ -42,5 +92,11 @@
     "plugins": [
       "prettier-plugin-tailwindcss"
     ]
+  },
+  "postcss": {
+    "plugins": {
+      "tailwindcss": {},
+      "autoprefixer": {}
+    }
   }
 }
