fix: build + compose

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ VITE_HOST_URL="http://localhost:3000"
 COMPOSE_APP_PORT="3000"
 COMPOSE_DATABASE_PORT="5432"
 COMPOSE_DATABASE_USER="postgres"
-COMPOSE_DATABASE_PASSWORD="postgres"
+COMPOSE_DATABASE_PASSWORD=""
 COMPOSE_DATABASE_NAME="postgres"
 COMPOSE_DATABASE_BACKUP_PATH="$HOME/backup"
 COMPOSE_PROFILES="development"
