--- a/package.json
+++ b/package.json
@@ -4,42 +4,41 @@
   "type": "module",
   "scripts": {
     "dev": "bun --bun solid-start dev",
-    "build": "solid-start build",
+    "build": "bun --bun solid-start build",
     "start": "bun --bun solid-start start",
     "push": "drizzle-kit push:pg",
     "studio": "drizzle-kit studio"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.13.1",
-    "@typescript-eslint/parser": "6.13.1",
+    "@typescript-eslint/eslint-plugin": "6.13.2",
+    "@typescript-eslint/parser": "6.13.2",
     "autoprefixer": "10.4.16",
     "bun-types": "latest",
     "drizzle-kit": "0.20.6",
     "esbuild": "0.19.8",
     "eslint": "8.55.0",
     "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-drizzle": "0.2.1",
+    "eslint-plugin-drizzle": "0.2.2",
     "eslint-plugin-import": "2.29.0",
     "eslint-plugin-solid": "0.13.0",
     "pg": "8.11.3",
     "postcss": "8.4.32",
     "prettier": "3.1.0",
-    "prettier-plugin-tailwindcss": "0.5.7",
+    "prettier-plugin-tailwindcss": "0.5.9",
     "solid-start-bun": "0.3.10",
-    "solid-start-node": "0.3.10",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.3.2",
-    "vite": "4.4.9"
+    "tailwindcss": "3.3.6",
+    "typescript": "5.3.3",
+    "vite": "5.0.6"
   },
   "dependencies": {
-    "@elysiajs/eden": "0.7.4",
+    "@elysiajs/eden": "0.7.6",
     "@paralleldrive/cuid2": "2.2.2",
     "@solidjs/meta": "0.29.1",
-    "@solidjs/router": "0.9.1",
+    "@solidjs/router": "0.10.0",
     "@tanstack/solid-query": "5.12.1",
     "drizzle-orm": "0.29.1",
     "drizzle-typebox": "0.1.1",
-    "elysia": "0.7.29",
+    "elysia": "0.7.30",
     "postgres": "3.4.3",
     "solid-js": "1.8.7",
     "solid-start": "0.3.10"
