--- a/package.json
+++ b/package.json
@@ -3,45 +3,42 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bun --bun solid-start dev",
-    "build": "bun --bun solid-start build",
-    "start": "bun --bun solid-start start",
+    "dev": "bun --bun vinxi dev",
+    "build": "bun --bun vinxi build",
+    "start": "bun ./.output/server/index.mjs",
     "push": "drizzle-kit push:pg",
     "studio": "drizzle-kit studio"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "6.13.2",
-    "@typescript-eslint/parser": "6.13.2",
+    "@typescript-eslint/eslint-plugin": "6.15.0",
+    "@typescript-eslint/parser": "6.15.0",
     "autoprefixer": "10.4.16",
     "bun-types": "latest",
-    "drizzle-kit": "0.20.6",
-    "esbuild": "0.19.8",
-    "eslint": "8.55.0",
+    "drizzle-kit": "0.20.7",
+    "eslint": "8.56.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-drizzle": "0.2.2",
-    "eslint-plugin-import": "2.29.0",
+    "eslint-plugin-import": "2.29.1",
     "eslint-plugin-solid": "0.13.0",
     "pg": "8.11.3",
     "postcss": "8.4.32",
-    "prettier": "3.1.0",
+    "prettier": "3.1.1",
     "prettier-plugin-tailwindcss": "0.5.9",
-    "solid-start-bun": "0.3.10",
-    "tailwindcss": "3.3.6",
-    "typescript": "5.3.3",
-    "vite": "4.4.9"
+    "tailwindcss": "3.4.0",
+    "typescript": "5.3.3"
   },
   "dependencies": {
-    "@elysiajs/eden": "0.7.6",
+    "@elysiajs/eden": "0.7.7",
     "@paralleldrive/cuid2": "2.2.2",
-    "@solidjs/meta": "0.29.1",
-    "@solidjs/router": "0.9.1",
-    "@tanstack/solid-query": "5.12.1",
+    "@solidjs/router": "0.10.5",
+    "@solidjs/start": "0.4.0",
+    "solid-js": "1.8.7",
+    "vinxi": "0.0.52",
+    "@tanstack/solid-query": "5.14.2",
     "drizzle-orm": "0.29.1",
     "drizzle-typebox": "0.1.1",
     "elysia": "0.7.30",
-    "postgres": "3.4.3",
-    "solid-js": "1.8.7",
-    "solid-start": "0.3.10"
+    "postgres": "3.4.3"
   },
   "eslintConfig": {
     "root": true,
