--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "bun --bun vinxi dev",
     "build": "NODE_ENV=production bun --bun vinxi build",
-    "start": "bun ./.output/server/index.mjs",
+    "start": "bun .output/server/index.mjs",
     "push": "drizzle-kit push:pg",
     "studio": "drizzle-kit studio"
   },
