fix: add database_url example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-DATABASE_URL=""
+DATABASE_URL="postgresql://postgres:xxxx@database:5432/dbest"
 VITE_HOST_URL="http://localhost:3000"
 COMPOSE_APP_PORT="3000"
 COMPOSE_DATABASE_PORT="5432"
 COMPOSE_DATABASE_USER="postgres"
-COMPOSE_DATABASE_PASSWORD=""
-COMPOSE_DATABASE_NAME="postgres"
+COMPOSE_DATABASE_PASSWORD="xxxx"
+COMPOSE_DATABASE_NAME="dbest"
 COMPOSE_DATABASE_BACKUP_PATH="$HOME/backup"
 COMPOSE_PROFILES="development"
