--- a/package.json
+++ b/package.json
@@ -11,34 +11,34 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@typescript-eslint/eslint-plugin": "6.17.0",
-    "@typescript-eslint/parser": "6.17.0",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
     "autoprefixer": "10.4.16",
-    "drizzle-kit": "0.20.9",
     "eslint": "8.56.0",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-drizzle": "0.2.3",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-solid": "0.13.1",
-    "pg": "8.11.3",
     "postcss": "8.4.33",
     "prettier": "3.1.1",
-    "prettier-plugin-tailwindcss": "0.5.10",
-    "tailwindcss": "3.4.0",
+    "prettier-plugin-tailwindcss": "0.5.11",
+    "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
   "dependencies": {
-    "@elysiajs/eden": "0.8.0",
+    "@elysiajs/eden": "0.8.1",
     "@paralleldrive/cuid2": "2.2.2",
-    "@solidjs/router": "0.10.6",
-    "@solidjs/start": "0.4.3",
-    "@tanstack/solid-query": "5.17.1",
+    "@solidjs/router": "0.10.7",
+    "@solidjs/start": "0.4.5",
+    "@tanstack/solid-query": "5.17.9",
     "drizzle-orm": "0.29.3",
     "drizzle-typebox": "0.1.1",
     "elysia": "0.8.8",
     "postgres": "3.4.3",
-    "solid-js": "1.8.8",
-    "vinxi": "0.1.1"
+    "solid-js": "1.8.9",
+    "vinxi": "0.1.1",
+    "pg": "8.11.3",
+    "drizzle-kit": "0.20.10"
   },
   "eslintConfig": {
     "root": true,
