--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "jsxSingleQuote": true,
   "bracketSameLine": true,
+  "trailingComma": "es5",
   "plugins": ["prettier-plugin-tailwindcss"]
 }
