--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,13 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
+    "allowJs": true,
     "noEmit": true,
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "types": ["vinxi/client"],
+    "types": ["vinxi/client", "vite/client"],
     "isolatedModules": true,
     "noUncheckedIndexedAccess": true,
     "baseUrl": "./",
