feat: solidstart 1.0.0-rc.0

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-DATABASE_URL="postgresql://postgres:xxxx@database:5432/dbest"
-VITE_HOST_URL="http://localhost:3000"
-COMPOSE_APP_PORT="3000"
-COMPOSE_DATABASE_PORT="5432"
-COMPOSE_DATABASE_USER="postgres"
-COMPOSE_DATABASE_PASSWORD="xxxx"
-COMPOSE_DATABASE_NAME="dbest"
-COMPOSE_DATABASE_BACKUP_PATH="$HOME/backup"
+PORT="3000"
+VITE_HOST_URL="http://localhost:$PORT"
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="example"
+DATABASE_NAME="dbest"
+DATABASE_URL="postgresql://$DATABASE_USER:$DATABASE_PASSWORD@localhost:5432/$DATABASE_NAME"
+DATABASE_BACKUP_PATH="$HOME/backup"
 COMPOSE_PROFILES="development"
