--- a/package.json
+++ b/package.json
@@ -10,34 +10,36 @@
     "studio": "drizzle-kit studio"
   },
   "devDependencies": {
-    "@types/bun": "1.0.4",
-    "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@typescript-eslint/parser": "6.19.1",
-    "autoprefixer": "10.4.17",
-    "eslint": "8.56.0",
+    "@types/bun": "1.1.1",
+    "@typescript-eslint/eslint-plugin": "7.8.0",
+    "@typescript-eslint/parser": "7.8.0",
+    "autoprefixer": "10.4.19",
+    "eslint": "9.1.1",
     "eslint-import-resolver-typescript": "3.6.1",
     "eslint-plugin-drizzle": "0.2.3",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-solid": "0.13.1",
-    "postcss": "8.4.33",
-    "prettier": "3.2.4",
-    "prettier-plugin-tailwindcss": "0.5.11",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "eslint-plugin-solid": "0.14.0",
+    "postcss": "8.4.38",
+    "prettier": "3.2.5",
+    "prettier-plugin-tailwindcss": "0.5.14",
+    "tailwindcss": "3.4.3",
+    "typescript": "5.4.5"
   },
   "dependencies": {
-    "@elysiajs/eden": "0.8.1",
+    "@electric-sql/pglite": "0.1.5",
+    "@elysiajs/eden": "1.0.12",
     "@paralleldrive/cuid2": "2.2.2",
-    "@solidjs/router": "0.10.10",
-    "@solidjs/start": "0.4.11",
-    "@tanstack/solid-query": "5.17.19",
-    "drizzle-kit": "0.20.13",
-    "drizzle-orm": "0.29.3",
+    "@solidjs/meta": "0.29.3",
+    "@solidjs/router": "0.13.2",
+    "@solidjs/start": "1.0.0-rc.0",
+    "@tanstack/solid-query": "5.32.1",
+    "drizzle-kit": "0.20.17",
+    "drizzle-orm": "0.30.9",
     "drizzle-typebox": "0.1.1",
-    "elysia": "0.8.15",
-    "pg": "8.11.3",
-    "postgres": "3.4.3",
-    "solid-js": "1.8.12",
-    "vinxi": "0.1.10"
+    "elysia": "1.0.15",
+    "pg": "8.11.5",
+    "postgres": "3.4.4",
+    "solid-js": "1.8.17",
+    "vinxi": "0.3.11"
   }
 }
