--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,25 +12,16 @@
   "rules": {
     "prefer-const": "off",
     "@typescript-eslint/no-explicit-any": "off",
-    "import/newline-after-import": [
-      "warn",
-      {
-        "count": 1
-      }
-    ],
+    "import/newline-after-import": ["warn", { "count": 1 }],
     "solid/no-array-handlers": "error",
     "solid/prefer-show": "error",
     "drizzle/enforce-delete-with-where": [
       "error",
-      {
-        "drizzleObjectName": ["db"]
-      }
+      { "drizzleObjectName": ["db"] }
     ],
     "drizzle/enforce-update-with-where": [
       "error",
-      {
-        "drizzleObjectName": ["db"]
-      }
+      { "drizzleObjectName": ["db"] }
     ]
   }
 }
