--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,24 +5,21 @@ services:
     build:
       context: .
       args:
-        DATABASE_URL: ${DATABASE_URL}
-        VITE_HOST_URL: ${VITE_HOST_URL:-http://localhost:3000}
+        PORT: ${PORT:-3000}
+        DATABASE_URL: postgresql://${DATABASE_USER:-postgres}:${DATABASE_PASSWORD:-example}@database:5432/${DATABASE_NAME:-dbest}
+        VITE_HOST_URL: ${VITE_HOST_URL:-http://localhost:${PORT:-3000}}
     depends_on:
       - database
-    links:
-      - database
     ports:
-      - ${COMPOSE_APP_PORT:-3000}:3000
+      - ${PORT:-3000}:${PORT:-3000}
 
   database:
     image: postgres:16-alpine
     restart: always
-    ports:
-      - ${COMPOSE_DATABASE_PORT:-5432}:5432
     environment:
-      POSTGRES_USER: ${COMPOSE_DATABASE_USER}
-      POSTGRES_PASSWORD: ${COMPOSE_DATABASE_PASSWORD}
-      POSTGRES_DB: ${COMPOSE_DATABASE_NAME}
+      POSTGRES_USER: ${DATABASE_USER:-postgres}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-example}
+      POSTGRES_DB: ${DATABASE_NAME:-dbest}
     volumes:
       - database:/var/lib/postgresql/data
 
@@ -31,8 +28,6 @@ services:
     restart: always
     depends_on:
       - database
-    links:
-      - database
     environment:
       BACKUP_LATEST_SYMLINK: backup-latest.tar.gz
       BACKUP_CRON_EXPRESSION: 0 0 * * *
@@ -40,7 +35,7 @@ services:
     volumes:
       - database:/backup:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ${COMPOSE_DATABASE_BACKUP_PATH:-$HOME/backup}/${COMPOSE_PROJECT_NAME}:/archive
+      - ${DATABASE_BACKUP_PATH:-$HOME/backup}/${COMPOSE_PROJECT_NAME}:/archive
     profiles:
       - production
 
