--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "bun --bun vinxi dev",
     "build": "bun --bun vinxi build",
     "start": "bun --bun vinxi start",
-    "push": "drizzle-kit push:pg",
+    "push": "drizzle-kit push",
     "studio": "drizzle-kit studio"
   },
   "devDependencies": {
     "@types/bun": "1.1.1",
+    "@types/pg": "8.11.6",
     "@typescript-eslint/eslint-plugin": "7.8.0",
     "@typescript-eslint/parser": "7.8.0",
     "autoprefixer": "10.4.19",
@@ -27,18 +28,17 @@
   },
   "dependencies": {
     "@electric-sql/pglite": "0.1.5",
-    "@elysiajs/eden": "1.0.12",
+    "@elysiajs/eden": "1.0.13",
     "@paralleldrive/cuid2": "2.2.2",
     "@solidjs/meta": "0.29.3",
-    "@solidjs/router": "0.13.2",
-    "@solidjs/start": "1.0.0-rc.0",
-    "@tanstack/solid-query": "5.32.1",
-    "drizzle-kit": "0.20.17",
-    "drizzle-orm": "0.30.9",
+    "@solidjs/router": "0.13.3",
+    "@solidjs/start": "1.0.0-rc.1",
+    "@tanstack/solid-query": "5.35.5",
+    "drizzle-kit": "0.21.1",
+    "drizzle-orm": "0.30.10",
     "drizzle-typebox": "0.1.1",
-    "elysia": "1.0.15",
+    "elysia": "1.0.17",
     "pg": "8.11.5",
-    "postgres": "3.4.4",
     "solid-js": "1.8.17",
     "vinxi": "0.3.11"
   }
